objects/Machine_Model__c.object
<CustomObject>
    <description>Account Machine Models</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Machine Models</relationshipLabel>
        <relationshipName>Machine_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Volume_Plus1__c</fullName>
        <label>2013</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Volume_Plus2__c</fullName>
        <label>2014</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Volume_Plus3__c</fullName>
        <label>2015</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Volume__c</fullName>
        <label>Production Volume - 2012</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Machine Models</relationshipLabel>
        <relationshipName>Machine_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Content_per_Machine__c</fullName>
        <label>Average Content per Machine</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_Reason__c</fullName>
        <label>Compelling Event - Reason</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <inlineHelpText>A compelling event could be eg. Machine Redesign</inlineHelpText>
        <label>Compelling Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronics_Software_Details__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Software - Details</label>
        <picklist>
            <controllingField>Electronics_Software__c</controllingField>
            <picklistValues>
                <fullName>PLUS+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LabView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoDeSys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control F(x) (Eaton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IQAN (Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BODAS (Bosch Rexroth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM programmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party programmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD programmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Software</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Electronics_Software__c</fullName>
        <description>Is software used to control above functions?</description>
        <label>Is software used for above functions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engine_Power__c</fullName>
        <label>Engine Power</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;18 kW (&lt;24 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18-37 kW (24-50 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38-56 kW (51-76 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57-75 kW (77-102 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-130 kW (103-177 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131-200 kW (178-272 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-300 kW (273-408 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-400 kW (409-544 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401-560 kW (545-761 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;560 kW (&gt;761 hp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fan_Drive_Details__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Fan Drive - Details</label>
        <picklist>
            <controllingField>Fan_Drive__c</controllingField>
            <picklistValues>
                <fullName>Fixed ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable ratio belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan pitch control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan non-reversing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan reversing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan stand-still</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viscous Clutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Pump</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fan_Drive__c</fullName>
        <label>Fan Drive</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical/Belt Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viscous clutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Model_Status__c</fullName>
        <label>Machine Model Status</label>
        <picklist>
            <picklistValues>
                <fullName>In development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Machine_Speed__c</fullName>
        <label>Maximum Machine Speed</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;10 km/h (&lt;6 mph)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-24 km/h (6-15 mph)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-40 km/h (16-25 mph)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-60 km/h (26-38 mph)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;60 km/h (&gt;38 mph)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not self-propelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_End_Date__c</fullName>
        <label>Production End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Start_Date__c</fullName>
        <inlineHelpText>Please type in the date manually if it is prior to those available in the drop down selection</inlineHelpText>
        <label>Production Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Propel_Function__c</fullName>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque converter transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrostatic transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powersplit transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not self-propelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dont&apos; know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Propel_Function_details__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Transmission - Details</label>
        <picklist>
            <controllingField>Propel_Function__c</controllingField>
            <picklistValues>
                <fullName>1 axle drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi axle drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powershift transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct wheel drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axle drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrostatic wheel assist drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed shift control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 motor gearbox control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery powered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine with generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic accumulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric accumulator (battery)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck/vehicle mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <label>Danfoss Share of Wallet (in %)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Steering_Function_Details__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Steering Function - Details</label>
        <picklist>
            <controllingField>Steering_Function__c</controllingField>
            <picklistValues>
                <fullName>Front steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allwheel steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque amplified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articulated steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer by wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joystick/mini wheel steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-axis steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row Crop Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joystick Steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini steering wheel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Steering_Function__c</fullName>
        <label>Steering Function</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrohydraulic steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric(-mechanical) steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Steering Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Machine_Potential__c</fullName>
        <inlineHelpText>Based on 2015 volume</inlineHelpText>
        <label>Total Annual Machine Potential</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Function_Details__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Working Function - Details</label>
        <picklist>
            <controllingField>Work_Function__c</controllingField>
            <picklistValues>
                <fullName>Open circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;60 l/m main function flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-120 l/m main function flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-300 l/m main function flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;300 l/m main function flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linear function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotary function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strawwalker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twin Rotor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Kinematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parallel-Kinematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special-Kinematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front hitch control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear hitch control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aux (valves for implements)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loader control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telescope control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick shift implement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Master-slave leveling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto tool leveling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stabilizer control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis control(leveling, side shift)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabin control</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Work_Function__c</fullName>
        <label>Working Function</label>
        <picklist>
            <picklistValues>
                <fullName>Hydraulic work function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric work function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Working Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dont&apos; know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Machine Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Machine_Model_Status__c</columns>
        <columns>Total_Machine_Potential__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Machine_Model_Master</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Annual_Production_Volume__c</columns>
        <columns>Annual_Production_Volume_Plus1__c</columns>
        <columns>Total_Machine_Potential__c</columns>
        <columns>Share_of_Wallet__c</columns>
        <columns>Compelling_Event__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Machine Model Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Missing_2015_Volume</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Annual_Production_Volume_Plus2__c</columns>
        <columns>Annual_Production_Volume_Plus3__c</columns>
        <columns>Share_of_Wallet__c</columns>
        <columns>Total_Machine_Potential__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Annual_Production_Volume_Plus3__c</field>
            <operation>equals</operation>
        </filters>
        <label>Missing 2015 Volume</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Machine Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Machine Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>